# ngx.agents

./: .coveragerc  .env.example  .env.example.updated  .env.example.vertex_ai_rag  .env.production  .env.test  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.a2a  Makefile  Makefile.k8s  NGX_AGENTS_CAPACIDADES.md  PLAN_IMPLEMENTACION_FRONTEND_DETALLADO.md  README.md  a2a_server_cleanup_report.json  a2a_server_migration_report.json  activate_component_env.sh  app_pyproject.toml  cache_metrics.json  cache_optimization_results.json  claude.md  clients_pyproject.toml  cloudbuild.yaml  comprehensive_project_analysis.md  core_pyproject.toml  docker-compose.celery.yml  docker-compose.yml  intent_analyzer_migration_report.json  migration_report.json  project_summary.md  propuesta_frontend_innovador_ngx.md  pyproject.toml  pytest.ini  requirements.txt  resumen_ejecutivo_ngx_agents.md  run_compatibility_tests.sh  run_tests.sh  run_tests_fixed.sh  (+9 more)
.githooks/: commit-msg  pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.venvs/agents/: pyproject.toml
.venvs/clients/: pyproject.toml
.venvs/core/: pyproject.toml
adk/: __init__.py  agent.py  toolkit.py
app/: main.py
backup_pyproject_20250512_222718/: consolidated_dependencies.txt
clients/: __init__.py  base_client.py  gcs_client.py  gemini_client.py  perplexity_client.py  persistence.py  supabase_client.py  vertex_ai_client_adapter.py  vertex_client.py
config/: budgets.json  gemini_models.py  secrets.py  settings.py
core/: __init__.py  advanced_generation.py  agent_card.py  async_processor.py  auth.py  batch_processor.py  budget.py  cache_strategies.py  cdn_config.py  celery_app.py  chaos_testing.py  circuit_breaker.py  contracts.py  degraded_mode.py  document_processor.py  domain_cache.py  embeddings_manager.py  feedback_service.py  image_cache.py  image_optimizer.py  intent_analyzer.py  intent_analyzer_optimized.py  logging_config.py  metrics.py  object_recognition.py  prompt_analyzer.py  redis_pool.py  request_prioritizer.py  settings.py  skill.py  state_manager.py  state_manager_optimized.py  telemetry.py  telemetry_adapter.py  telemetry_loader.py  telemetry_mock.py  test_settings.py  vision_metrics.py  vision_processor.py  visualization.py  (+1 more)
docker/: Dockerfile.base
docs/: PROGRESS_SUMMARY_2025_01_25.md  adaptadores_arquitectura.md  adk_integration.md  advanced_image_processing_implementation.md  api_credentials_requirements.md  audio_voice_implementation.md  cache_avanzado.md  codex_integration.md  configuracion_entorno_produccion.md  consideraciones_adicionales.md  dependency_management.md  deployment.md  embeddings_manager_guide.md  feedback_and_learning_system.md  future_enhancements_implementation_plan.md  future_enhancements_implementation_plan_updated.md  implementacion_vertex_ai_multimodal.md  implementacion_vertex_ai_optimizado.md  implementacion_vertex_ai_vision.md  integration_testing_guide.md  kubernetes_deployment.md  metrics_and_monitoring.md  migracion_vertex_ai_client.md  migraciones_completadas.md  observability.md  observability_guide.md  orchestrator_a2a_migration.md  orchestrator_intent_analyzer_migration.md  performance_results.md  plan_limpieza_vertex_ai.md  plan_optimizacion_estado_actual.md  plan_optimizacion_ngx_agents.md  progress_a2a_migration.md  progress_biohacking_innovator_migration.md  progress_elite_training_strategist_migration.md  progress_integration_testing.md  progress_intent_analyzer_migration.md  progress_orchestrator_migration.md  progress_recovery_corrective_migration.md  progress_security_compliance_guardian_migration.md  (+20 more)
examples/: FeedbackComponent.tsx  StreamChatComponent.tsx  adk_usage_example.py  audio_client_demo.html  cache_avanzado_ejemplo.py  cache_avanzado_ejemplo_simple.py  codex_example.py  document_processing_example.py  mock_mode_testing.py  stream_client.html  stream_client_enhanced.html  visualization_demo.html  wearables_demo.py
frontend/: .env.local.example  .eslintrc.json  CONTEXTO_SESION_3.md  FRONTEND_PROGRESS.md  PLAN_FIX_ERRORS_SESSION_3.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
infrastructure/: README.md  __init__.py  a2a_optimized.py  a2a_server.py  health.py  health_router.py
integrations/: __init__.py
kubernetes/: deployment.yaml  ingress.yaml  namespace-config.yaml  network-policy.yaml  prometheus-rules.yaml  vertex-ai-deployment.yaml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  session_2025_05_24.md  session_2025_05_25.md  session_2025_05_26_fase8.md  systemPatterns.md  techContext.md
monitoring/: alert_manager.py  docker-compose.yml  prometheus.yml  vision_dashboard.py
scripts/: add_type_hints.py  apply_dashboards.sh  canary_deploy_vertex_ai.sh  cdn-deploy.sh  check_dependencies.py  clean_project.sh  clean_pyproject_files.sh  clean_tests.sh  cleanup_a2a_server_files.py  cleanup_intent_analyzer_files.py  cleanup_pinecone.py  cleanup_redundant_files.py  cleanup_state_manager_files.py  deploy_to_kubernetes.sh  find_missing_type_hints.py  fix_async_tests.py  fix_bare_excepts.py  fix_mock_vertex_ai.py  fix_test_issues.py  fix_tests_basico.py  fix_tests_simple.py  fix_vertex_ai_client.py  generate_project_summary.py  k8s-deploy.sh  migrate_a2a_server.py  migrate_intent_analyzer.py  migrate_pinecone_to_vertex.py  migrate_state_manager.py  mock_telemetry.py  optimize_cache_config.py  optimize_cache_config_fixed.py  optimize_vertex_ai_cache.py  replace_prints_with_logging.py  run_dev.sh  run_integration_tests.py  setup_cache_monitoring.py  setup_credentials.py  setup_git_environment.sh  simple_cache_monitor.py  start_monitoring.sh  (+30 more)
services/: __init__.py  program_classification_service.py
tasks/: __init__.py  analytics.py  critical.py  images.py  maintenance.py  reports.py
terraform/: kubernetes.tf  main.tf  monitoring.tf  networking.tf  security.tf  variables.tf  vertex_ai.tf
tests/: README.md  conftest.py  test_a2a_connector.py  test_a2a_server.py  test_api_error_handling.py  test_auth.py  test_chat_integration.py  test_circuit_breaker.py  (+4 more)
(+364 files in other folders)
