[tool.poetry]
name = "ngx-agents"
version = "0.1.0"
description = "Sistema de agentes NGX para entrenamiento y nutrición"
authors = ["NGX Team"]
readme = "README.md"
packages = [
    {include = "agents"},
    {include = "app"},
    {include = "clients"},
    {include = "core"},
    {include = "tools"},
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

# API y servidor
fastapi = ">=0.110.0,<0.120.0"
uvicorn = {extras = ["standard"], version = ">=0.34.0,<0.35.0"}
python-dotenv = ">=1.0.0,<2.0.0"
pydantic = ">=2.6.0,<3.0.0"
pydantic-settings = ">=2.2.0,<3.0.0"

# Autenticación
python-jose = {extras = ["cryptography"], version = ">=3.3.0,<4.0.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}

# Comunicación
websockets = ">=12.0,<13.0"
# Framework Google ADK para agentes A2A
google-adk = "^0.1.0"
sse-starlette = ">=1.6.1,<2.0.0"

# Logging
python-json-logger = ">=2.0.7,<3.0.0"

# HTTP
httpx = ">=0.24.0,<0.28.0"

# Base de datos
supabase = ">=2.3.0,<3.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"
mypy = "^1.10.0"
ruff = "^0.4.7"

[tool.poetry.group.test.dependencies]
pytest = ">=8.2.0,<9.0.0"
pytest-asyncio = ">=0.23.0,<0.24.0"
pytest-httpx = ">=0.30.0,<0.31.0"
pytest-cov = ">=4.1.0,<5.0.0"
python-multipart = ">=0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "unit: pruebas unitarias que no requieren la aplicación FastAPI completa",
    "integration: pruebas de integración que requieren la aplicación FastAPI completa",
    "agents: pruebas específicas para los agentes",
    "api: pruebas específicas para la API",
]
asyncio_mode = "strict"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py39"
